syntax = "proto3";

package api;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/Zenrock-Foundation/zrchain/v6/sidecar/proto/api";

service SidecarService {
  rpc GetSidecarState(SidecarStateRequest) returns (SidecarStateResponse) {}
  rpc GetSidecarStateByEthHeight(SidecarStateByEthHeightRequest)
      returns (SidecarStateResponse) {}
  rpc GetBitcoinBlockHeaderByHeight(BitcoinBlockHeaderByHeightRequest)
      returns (BitcoinBlockHeaderResponse) {}
  rpc GetLatestBitcoinBlockHeader(LatestBitcoinBlockHeaderRequest)
      returns (BitcoinBlockHeaderResponse) {}
  rpc GetLatestEthereumNonceForAccount(LatestEthereumNonceForAccountRequest)
      returns (LatestEthereumNonceForAccountResponse) {}
  rpc GetSolanaRecentBlockhash(SolanaRecentBlockhashRequest)
      returns (SolanaRecentBlockhashResponse) {}
}

message LatestBitcoinBlockHeaderRequest { string ChainName = 1; }

message BitcoinBlockHeaderByHeightRequest {
  int64 BlockHeight = 1;
  string ChainName = 2;
}

message BitcoinBlockHeaderResponse {
  BTCBlockHeader blockHeader = 1;
  int64 BlockHeight = 2;
  int64 TipHeight = 3;
}

message BTCBlockHeader {
  int64 Version = 1;
  string PrevBlock = 2;
  string MerkleRoot = 3;
  int64 TimeStamp = 4;
  int64 Bits = 5;
  int64 Nonce = 6;
  string BlockHash = 7;
}

message Redemption {
  uint64 id = 1;
  bytes destination_address = 2;
  uint64 amount = 3;
}

message BurnEvent {
  string txID = 1;
  uint64 logIndex = 2;
  string chainID = 3;
  bytes destinationAddr = 4;
  uint64 amount = 5;
}

message SidecarStateRequest {}

message SidecarStateResponse {
  bytes EigenDelegations = 1;
  uint64 EthBlockHeight = 2;
  uint64 EthGasLimit = 3;
  uint64 EthBaseFee = 4;
  uint64 EthTipCap = 5;
  uint64 SolanaLamportsPerSignature = 6;
  repeated BurnEvent EthBurnEvents = 7 [(gogoproto.nullable) = false];
  repeated Redemption Redemptions = 8 [(gogoproto.nullable) = false];
  string ROCKUSDPrice = 9;
  string BTCUSDPrice = 10;
  string ETHUSDPrice = 11;
}

message SidecarStateByEthHeightRequest { uint64 EthBlockHeight = 1; }

message LatestEthereumNonceForAccountRequest { string Address = 1; }

message LatestEthereumNonceForAccountResponse { uint64 Nonce = 1; }

message SolanaRecentBlockhashRequest {}

message SolanaRecentBlockhashResponse { 
  string Blockhash = 1;
  uint64 Slot = 2;
}
